--- a/jQuery/working with Events/index.html
+++ b/jQuery/working with Events/index.html
@@ -7,10 +7,12 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body> 
-        <div id="example">    	
+        <div id="example">   
+            <button class="switch">Click me</button> 	
         </div>
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
+        
         
