--- a/jQuery/working with Events/index.html
+++ b/jQuery/working with Events/index.html
@@ -7,9 +7,18 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body> 
-        <div id="example">   
-            <button class="switch">Click me</button> 	
+        <div id="example" class="container">   
+            <select id="place">
+                <option value="">Pick your destination</option>
+                <option value="santiago" data-price="100">Santiago</option>
+                <option value="madrid" data-price="180">Madrid</option>
+                <option value="yakarta" data-price="300">Yakarta</option>
+                <option  value="istambul" data-price="150">Istambul</option>
+                <option value="tokyo" data-price="200">Tokyo</option>
+            </select>
+            <button>Pick</button>
         </div>
+        <div id="result"  class="container"></div>
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script src="js/script.js"></script>
     </body>
