--- a/jQuery/working with Events/index.html
+++ b/jQuery/working with Events/index.html
@@ -8,15 +8,7 @@
     </head>
     <body> 
         <div id="example" class="container">   
-            <select id="place">
-                <option value="">Pick your destination</option>
-                <option value="santiago" data-price="100">Santiago</option>
-                <option value="madrid" data-price="180">Madrid</option>
-                <option value="yakarta" data-price="300">Yakarta</option>
-                <option  value="istambul" data-price="150">Istambul</option>
-                <option value="tokyo" data-price="200">Tokyo</option>
-            </select>
-            <button>Pick</button>
+            <input type="text" />
         </div>
         <div id="result"  class="container"></div>
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
