--- a/jQuery/working with Events/index.html
+++ b/jQuery/working with Events/index.html
@@ -8,9 +8,8 @@
     </head>
     <body> 
         <div id="example" class="container">   
-            <input type="text" />
+            <a href="http://zenva.com">Hello</a>
         </div>
-        <div id="result"  class="container"></div>
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script src="js/script.js"></script>
     </body>
