--- a/jQuery/DOM Manipulation/index.html
+++ b/jQuery/DOM Manipulation/index.html
@@ -8,32 +8,11 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>        
-        <div id="add-container">
-            <input type="text" />
-            <button>Add</button>
-        </div>
-
-        <div id="places-container">
-            <div class="item">
-                <div class="remove">X</div>
-                Paris
-            </div>
-            <div class="item">
-                <div class="remove">X</div>
-                Brisbane
-            </div>
-            <div class="item">
-                <div class="remove">X</div>
-                Lima
-            </div>
-            <div class="item">
-                <div class="remove">X</div>
-                Nairobi
-            </div>
+        <div id="container">                        
+            JQUERY :)
         </div>
 
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
-        
