--- a/jQuery/jQuery selectors/jQueryPage.html
+++ b/jQuery/jQuery selectors/jQueryPage.html
@@ -1,19 +1,93 @@
+<!DOCTYPE html>
 <html>
    <head>
-      <script type="text/javascript" src="jquery.js"></script>
+      <title>Index</title>
+      <style type="text/css">
+          .BlueDiv { background-color: Navy; color:White;width:200px;}
+          .RedDiv { background-color: Red; color:White; width:200px;}
+          .style1
+          {
+              width: 100%;
+          }
+      </style>
+      <script src="jquery.js" type="text/javascript"></script>
       <script type="text/javascript">
-          window.onload = function() {
-             //alert('Window loaded');
-          };
-
-          $(document).ready(function() {
-             $('#myContent').html('Hello World');
+          $(document).ready(function () {
+            $('div').each(function(){
+               alert($(this).html())
+            })
+              
           });
       </script>
-   </head>
-   <body>
-       <div id="myContent">
-           My jQuery enabled Page!
-       </div>
-   </body>
+  </head>
+  <body>
+      <div id="TestDiv" title="Div Title asdf asdfsdf asdf">
+          This is my div text
+      </div>
+      <div title="Contains Table">
+          <table id="DataTable">
+            <tr>
+               <td>Cell 1 Row 1</td>
+            </tr>
+            <tr>
+               <td>Cell 1 Row 2</td>
+            </tr>
+            <tr>
+               <td>Cell 1 Row 3</td>
+            </tr>
+            <tr>
+               <td>
+                  <table style="width:100%">
+                      <tr>
+                          <td>Nested Table Cell and Row</td>
+                      </tr>
+                  </table>
+               </td>
+            </tr>
+          </table>
+          <br />
+      </div>
+      <div class="BlueDiv">
+          <span>Blue div</span>
+      </div>
+      <br />
+      <span class="BlueDiv">This is my blue span</span>
+      <br />
+      <div class="RedDiv">
+          <span>Red div</span>
+      </div>
+      <p>
+          <img src="Images/pluralsight.png" />
+      </p>
+  
+      <form id="form1" runat="server">
+          <table style="width:300px;">
+              <tr>
+                  <td style="width:30%;">First Name</td>
+                  <td style="width:70%;"><input id="FirstNameTextBox" value="John" type="text" /></td>
+              </tr>
+              <tr>
+                  <td>Last Name</td>
+                  <td><input id="LastNameTextBox" type="text" /></td>
+              </tr>
+              <tr>
+                  <td>Comments</td>
+                  <td><textarea rows="5" cols="60" id="CommentsTextBox">TextArea</textarea></td>
+              </tr>           
+              <tr>
+                  <td>
+                  <select id="sel">
+                      <option value="AZ">AZ</option>
+                      <option value="CA" selected="true">CA</option>
+                  </select></td>
+                  <td>&nbsp;</td>
+              </tr>
+              <tr>
+                  <td><input id="SubmitButton" type="button" value="Submit" /></td>
+                  <td>&nbsp;</td>
+              </tr>
+          </table>  
+  
+      </form>
+  </body>
 </html>
