--- a/jQuery/jQuery selectors/jQueryPage.html
+++ b/jQuery/jQuery selectors/jQueryPage.html
@@ -13,11 +13,8 @@
       <script src="jquery.js" type="text/javascript"></script>
       <script type="text/javascript">
           $(document).ready(function () {
-            $('div').each(function(){
-               alert($(this).html())
-            })
-              
-          });
+        var divs= $('input[type="text"]');
+        alert(divs.length);          });
       </script>
   </head>
   <body>
