--- a/jQuery/jQuery selectors/jQueryPage.html
+++ b/jQuery/jQuery selectors/jQueryPage.html
@@ -13,8 +13,11 @@
       <script src="jquery.js" type="text/javascript"></script>
       <script type="text/javascript">
           $(document).ready(function () {
-        var divs= $('input[type="text"]');
-        alert(divs.length);          });
+            $(':input').each(function(){
+               var elem = $(this);
+               alert(elem.val())
+            })
+          });
       </script>
   </head>
   <body>
