--- a/jQuery/jQuery selectors/jQueryPage.html
+++ b/jQuery/jQuery selectors/jQueryPage.html
@@ -13,10 +13,8 @@
       <script src="jquery.js" type="text/javascript"></script>
       <script type="text/javascript">
           $(document).ready(function () {
-            $(':input').each(function(){
-               var elem = $(this);
-               alert(elem.val())
-            })
+            alert($('div:contains("my div")').html())
+            
           });
       </script>
   </head>
