--- a/jQuery/jQuery selectors/jQueryPage.html
+++ b/jQuery/jQuery selectors/jQueryPage.html
@@ -13,7 +13,7 @@
       <script src="jquery.js" type="text/javascript"></script>
       <script type="text/javascript">
           $(document).ready(function () {
-            alert($('div[title$="Tittle"]').html());
+            alert($('div[title^="Tittle"]').html());
             
           });
       </script>
