--- a/jQuery/jQuery selectors/jQueryPage.html
+++ b/jQuery/jQuery selectors/jQueryPage.html
@@ -24,7 +24,7 @@
             $('div.BlueDiv,div.RedDiv').each(function(index){
                //raw DOM object
                this.title ="Some title";
-               alert(this.title);
+               $(this).attr('title','Some Title 2');
             })
           });
       </script>
