--- a/jQuery/jQuery selectors/jQueryPage.html
+++ b/jQuery/jQuery selectors/jQueryPage.html
@@ -27,12 +27,13 @@
                $(this).attr('title','Some Title 2');
             });
 
-            $('div.BlueDiv,div.RedDiv').attr(
+            $('div.BlueDiv,div.RedDiv')
+            .attr(
                {
                   title:'some title3',
-                  style:'font-size:14pt;background-color:yellow;'
                }
-            )
+            ).css('font-size','14pt')
+            .css('background-color','yellow');
           });
       </script>
   </head>
