--- a/jQuery/jQuery selectors/jQueryPage.html
+++ b/jQuery/jQuery selectors/jQueryPage.html
@@ -13,43 +13,7 @@
       <script src="jquery.js" type="text/javascript"></script>
       <script type="text/javascript">
           $(document).ready(function () {
-            var html ='';
-            $('div.BlueDiv,div.RedDiv').each(function(index){
-               html += "<br />" + index+ " "+$(this).text();
-            });
-            var output = $('#OutputDiv');
-            output.html(html);
-
-            //Modifying properties and attributes
-            $('div.BlueDiv,div.RedDiv').each(function(index){
-               //raw DOM object
-               this.title ="Some title";
-               $(this).attr('title','Some Title 2');
-            });
-
-            $('div.BlueDiv,div.RedDiv')
-            .attr(
-               {
-                  title:'some title3',
-               }
-            ).css('font-size','14pt')
-            .css('background-color','yellow');
-
-            //Modifying the DOM
-            var tcd =$('#TableContainerDiv')
-              tcd.append('<span style="background-color:green">Append child 1 </span>');
-              tcd.prepend('<br /><span style="background-color:blue">Prepended child 1 </span>');
-              $('<br /><span style="background-color:blue">Appended child 2 </span>').appendTo(tcd);
-              $('<span style="background-color:blue">Prepended child 2 </span>').prependTo(tcd);
-
-              //wrap
-              $('span.Foo').wrap('<div class="RedDiv ParentWrapper" />');
-              $('div.ParentWrapper').each(function(){
-                 alert($(this).html());
-              });
-
-              //Remove
-              $('div.ParentWrapper').remove();
+   
           });
       </script>
   </head>
@@ -131,5 +95,17 @@
           </table>  
   
       </form>
+      <script type="text/javascript">
+      //Handle events the old-fashioned way
+         var button = document.getElementById('SubmitButton');
+         if (document.addEventListener){
+            button.addEventListener('click',function(){
+               alert('Clicked Button');
+            },false);
+         }else{
+            button.attachEvent('onclick',function(){
+               alert('Clicked IE Button');})
+         }
+      </script>
   </body>
 </html>
