--- a/jQuery/jQuery selectors/jQueryPage.html
+++ b/jQuery/jQuery selectors/jQueryPage.html
@@ -13,8 +13,17 @@
       <script src="jquery.js" type="text/javascript"></script>
       <script type="text/javascript">
           $(document).ready(function () {
-   
+               wireEvents();
           });
+          function wireEvents(){
+            $('#SubmitButton').click(function(){
+             var firstNameVal =$('#FirstNameTextBox').val();
+             var lastNameVal =$('#LastNameTextBox').val();
+               $('#DivOutput').text(firstNameVal+' '+lastNameVal);
+
+               
+            });
+          }
       </script>
   </head>
   <body>
@@ -66,7 +75,7 @@
           <img src="Images/pluralsight.png" />
       </p>
   
-      <form id="form1" runat="server">
+      <form id="form1" >
           <table style="width:300px;">
               <tr>
                   <td style="width:30%;">First Name</td>
@@ -90,14 +99,16 @@
               </tr>
               <tr>
                   <td><input id="SubmitButton" type="button" value="Submit" /></td>
-                  <td>&nbsp;</td>
+                  <td>
+                     <div id="DivOutput"></div>
+                  </td>
               </tr>
           </table>  
   
       </form>
       <script type="text/javascript">
       //Handle events the old-fashioned way
-         var button = document.getElementById('SubmitButton');
+        /* var button = document.getElementById('SubmitButton');
          if (document.addEventListener){
             button.addEventListener('click',function(){
                alert('Clicked Button');
@@ -105,7 +116,7 @@
          }else{
             button.attachEvent('onclick',function(){
                alert('Clicked IE Button');})
-         }
+         }*/
       </script>
   </body>
 </html>
