--- a/jQuery/jQuery selectors/jQueryPage.html
+++ b/jQuery/jQuery selectors/jQueryPage.html
@@ -28,7 +28,7 @@
             $('.MyInput').change(function(){
                alert($(this).val());
                $(this).addClass('Highlight');
-            });
+            });/*
             $('#MyDiv').mouseenter(function(){
               Toggle(this);
                $(this).css('cursor','pointer')
@@ -42,7 +42,13 @@
             });
             function Toggle(div){
                $(div).toggleClass('Highlight')
-            }
+            }*/
+
+            //bind() and on()
+            $('#MyDiv').bind('mouseenter mouseleave mouseup',function(e){
+               $(this).toggleClass('Highlight');
+               $(this).css('cursor','pointer');
+            })
           }
       </script>
   </head>
