--- a/jQuery/AJAX/2/website/index.html
+++ b/jQuery/AJAX/2/website/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html >
 <html > 
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link href="/favicon.ico" type="image/x-icon" rel="icon" /> 
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
         <title>jQuery Load of Script</title>
         <script type="text/javascript" src="http://www.google.com/jsapi"></script>
         <script src="jquery.js" type="text/javascript"></script>
         <script type="text/javascript">
             $(document).ready(function(){
                 $("#myButton").click(function() {
-                    $("#myDiv").load("HelpDetails.html");
+                    $("#myDiv").load("HelpDetails.html #SubTOC");
                 });
              });
          </script>
     </head>
     <body>
-        <button id="myButton">Click to grt HTML</button>
+        <button id="myButton">Click to get HTML</button>
         <div id="myDiv"></div>
     </body>
 </html>
